# pyrkafka

./: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml
src/: consumer.rs  lib.rs  producer.rs
